# brainage-public

./: POSTER_REFERENCES.md  QR.md  README.md
assets/: POSTER_REFERENCES.md
lesion_agnostic/configs/BID/: CM_BID.sh  GLI_BID.sh  GLI_BID_rerun.sh  USB_BID.sh
lesion_agnostic/configs/BNX_PREP/: BNX_CM_BID_PREP.sh  BNX_CM_LIT_PREP.sh  BNX_CM_PREP.sh  BNX_CM_PREP_rerun.sh  BNX_CM_USB_PREP.sh  BNX_GLI_BID_PREP.sh  BNX_GLI_BID_PREP_rerun.sh  BNX_GLI_LIT_PREP.sh  BNX_GLI_PREP_rerun.sh  (+4 more)
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/: pyproject.toml
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoder_functions_3d/: cnn.py
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoders/architectures/: __init__.py  cnn.py  lpips.py  medicalperceptual.py  mlp.py  utils.py
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoders/base/: base_model.py  constants.py  dataloaders.py  datasets.py  distributions.py  validation.py
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoders/configs/: default.yaml
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoders/configs/model_type/: AutoencoderKL.yaml  AutoencoderKLAD.yaml  cvaebase.yaml  vaebase.yaml
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/autoencoders/models/: __init__.py  aekl.py  aekl_ad.py  cvaebase.py  vaebase.py
lesion_agnostic/exp_0/synth_lesion_generator/legacy/USB/USB/autoencoders/baseline_3d_VAE/: cnn.py
(+603 files in other folders)
